--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="Source\Game\enemy_base_component.h" />
     <ClInclude Include="Source\Game\enemy_forest_demon_component.h" />
     <ClInclude Include="Source\Game\enemy_slime_component.h" />
+    <ClInclude Include="Source\Game\enemy_soldier_component.h" />
     <ClInclude Include="Source\Game\player_component.h" />
     <ClInclude Include="Source\Game\rotation_sample.h" />
     <ClInclude Include="Source\Game\sound_resource.h" />
