--- a/imgui.ini
+++ b/imgui.ini
@@ -1,9 +1,7 @@
 [Window][Debug##Default]
-ViewportPos=171,221
-ViewportId=0xA4D966FE
+Pos=0,0
 Size=912,648
 Collapsed=0
-DockId=0x00000006,0
 
 [Window][Scene01]
 Pos=1108,588
@@ -16,12 +14,10 @@ Size=432,261
 Collapsed=0
 
 [Window][Scene]
-ViewportPos=171,221
-ViewportId=0xA4D966FE
-Pos=914,0
-Size=377,648
+Pos=1942,31
+Size=618,1539
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000004,0
 
 [Window][Scene03]
 Pos=887,106
@@ -59,26 +55,26 @@ Size=100,48
 Collapsed=0
 
 [Window][Content]
-ViewportPos=171,221
-ViewportId=0xA4D966FE
-Pos=0,650
-Size=1291,290
+Pos=0,1172
+Size=1940,398
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][RTV]
-ViewportPos=171,221
-ViewportId=0xA4D966FE
-Size=912,648
+Pos=0,31
+Size=1940,1139
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000001,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=2560,1570
+Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000001 Pos=171,221 Size=1291,940 Split=Y Selected=0x18B8C0DE
-  DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=445,385 Selected=0x18B8C0DE
-  DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=445,390 Split=Y Selected=0xCCA64F5D
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=965,544 Split=X Selected=0xCCA64F5D
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=827,306 Selected=0xCCA64F5D
-      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=342,306 Selected=0x18B8C0DE
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=965,244 Selected=0x31780935
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=11,76 Size=2560,1539 Split=X Selected=0xCCA64F5D
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1940,1029 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1711,1139 CentralNode=1 Selected=0xCCA64F5D
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1711,398 Selected=0x31780935
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=618,1029 Selected=0x18B8C0DE
 
