--- a/imgui.ini
+++ b/imgui.ini
@@ -14,8 +14,8 @@ Size=432,261
 Collapsed=0
 
 [Window][Scene]
-Pos=1942,31
-Size=618,1539
+Pos=25,31
+Size=7,1
 Collapsed=0
 DockId=0x00000004,0
 
@@ -55,26 +55,34 @@ Size=100,48
 Collapsed=0
 
 [Window][Content]
-Pos=0,1172
-Size=1940,398
+Pos=0,34
+Size=32,1
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][RTV]
-Pos=0,31
-Size=1940,1139
+Pos=17,31
+Size=6,1
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2560,1570
+Size=46,32
 Collapsed=0
 
+[Window][Hierarchy]
+Pos=0,31
+Size=15,1
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=11,76 Size=2560,1539 Split=X Selected=0xCCA64F5D
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1940,1029 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1711,1139 CentralNode=1 Selected=0xCCA64F5D
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1711,398 Selected=0x31780935
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=618,1029 Selected=0x18B8C0DE
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=2560,1047 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=347,1539 Selected=0x788BAA0D
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=2211,1539 Split=X
+      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1563,1539 CentralNode=1 Selected=0xCCA64F5D
+      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=646,1539 Selected=0x18B8C0DE
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=2560,490 Selected=0x31780935
 
