ImGui上でEntityの追加完了

--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -513,6 +513,12 @@
     <ClCompile Include="Source\Engine\hierarchy.cpp">
       <Filter>Source\Engine\System</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Engine\inspector.cpp">
+      <Filter>Source\Engine\System</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\cum_imgui_helper.cpp">
+      <Filter>Source\Engine\System</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Engine\scene.h">
@@ -924,6 +930,9 @@
       <Filter>Header\Game\Components</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\hierarchy.h">
+      <Filter>Header\Engine\System</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\inspector.h">
       <Filter>Header\Engine\System</Filter>
     </ClInclude>
   </ItemGroup>
