--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="Source\Engine\input_device.h" />
     <ClInclude Include="Source\Engine\input_manager.h" />
     <ClInclude Include="Source\Engine\input_system.h" />
+    <ClInclude Include="Source\Engine\inspector.h" />
     <ClInclude Include="Source\Engine\light.h" />
     <ClInclude Include="Source\Engine\local_shader_manager.h" />
     <ClInclude Include="Source\Engine\locator.h" />
@@ -179,6 +180,7 @@
     <ClCompile Include="Source\Engine\collision_manager.cpp" />
     <ClCompile Include="Source\Engine\component_list.cpp" />
     <ClCompile Include="Source\Engine\content_brawser.cpp" />
+    <ClCompile Include="Source\Engine\cum_imgui_helper.cpp" />
     <ClCompile Include="Source\Engine\debug_collision.cpp" />
     <ClCompile Include="Source\Engine\depth_map.cpp" />
     <ClCompile Include="Source\Engine\depth_stencil.cpp" />
@@ -203,6 +205,7 @@
     <ClCompile Include="Source\Engine\input_device.cpp" />
     <ClCompile Include="Source\Engine\input_manager.cpp" />
     <ClCompile Include="Source\Engine\input_system.cpp" />
+    <ClCompile Include="Source\Engine\inspector.cpp" />
     <ClCompile Include="Source\Engine\light.cpp" />
     <ClCompile Include="Source\Engine\local_shader_manager.cpp" />
     <ClCompile Include="Source\Engine\Logger.cpp" />
