--- a/imgui.ini
+++ b/imgui.ini
@@ -77,12 +77,18 @@ Size=15,1
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Inspector]
+Pos=25,31
+Size=7,1
+Collapsed=0
+DockId=0x00000004,1
+
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
   DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=2560,1047 Split=X
     DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=347,1539 Selected=0x788BAA0D
     DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=2211,1539 Split=X
-      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1563,1539 CentralNode=1 Selected=0xCCA64F5D
-      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=646,1539 Selected=0x18B8C0DE
+      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1650,1539 CentralNode=1 Selected=0xCCA64F5D
+      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=559,1539 Selected=0xF02CD328
   DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=2560,490 Selected=0x31780935
 
