--- a/imgui.ini
+++ b/imgui.ini
@@ -14,8 +14,8 @@ Size=432,261
 Collapsed=0
 
 [Window][Scene]
-Pos=25,31
-Size=7,1
+Pos=26,34
+Size=6,32
 Collapsed=0
 DockId=0x00000004,0
 
@@ -55,16 +55,16 @@ Size=100,48
 Collapsed=0
 
 [Window][Content]
-Pos=0,34
-Size=32,1
+Pos=0,36
+Size=32,32
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][RTV]
-Pos=17,31
-Size=6,1
+Pos=13,34
+Size=11,32
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -72,23 +72,36 @@ Size=46,32
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=0,31
-Size=15,1
+Pos=0,34
+Size=11,32
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][Inspector]
-Pos=25,31
-Size=7,1
+Pos=26,34
+Size=6,32
 Collapsed=0
 DockId=0x00000004,1
 
+[Window][Menu Bar]
+Pos=0,31
+Size=32,1
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Menu Setting]
+Pos=610,282
+Size=599,314
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=2560,1047 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=347,1539 Selected=0x788BAA0D
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=2211,1539 Split=X
-      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1494,1539 CentralNode=1 Selected=0xCCA64F5D
-      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=715,1539 Selected=0xF02CD328
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=2560,490 Selected=0x31780935
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
+  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,77 HiddenTabBar=1 Selected=0x1C39D6E4
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1460 Split=Y
+    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=2560,1081 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
+        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=350,1025 Selected=0x788BAA0D
+        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1714,1025 CentralNode=1 Selected=0xCCA64F5D
+      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
+    DockNode      ID=0x00000007 Parent=0x00000008 SizeRef=2560,456 Selected=0x31780935
 
