アセットシート作成中

--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -312,9 +312,6 @@
     <ClCompile Include="Source\Engine\component_list.cpp">
       <Filter>Source\Engine\System</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Engine\content_brawser.cpp">
-      <Filter>Source\Engine\System</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Engine\depth_stencil.cpp">
       <Filter>Source\Engine\System</Filter>
     </ClCompile>
@@ -325,9 +322,6 @@
       <Filter>Source\Engine\System</Filter>
     </ClCompile>
     <ClCompile Include="Source\Engine\ecs.cpp">
-      <Filter>Source\Engine\System</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Engine\editor_manager.cpp">
       <Filter>Source\Engine\System</Filter>
     </ClCompile>
     <ClCompile Include="Source\Engine\fbx_model_resource.cpp">
@@ -510,17 +504,38 @@
     <ClCompile Include="Source\Game\enemy_soldier_component.cpp">
       <Filter>Source\Game\Components</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Engine\hierarchy.cpp">
-      <Filter>Source\Engine\System</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Engine\inspector.cpp">
-      <Filter>Source\Engine\System</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Engine\cum_imgui_helper.cpp">
       <Filter>Source\Engine\System</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Engine\editor_manager.cpp">
+      <Filter>Source\Engine\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\hierarchy.cpp">
+      <Filter>Source\Engine\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\inspector.cpp">
+      <Filter>Source\Engine\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\content_brawser.cpp">
+      <Filter>Source\Engine\Editor</Filter>
+    </ClCompile>
     <ClCompile Include="Source\Engine\menu_bar.cpp">
-      <Filter>Source\Engine\System</Filter>
+      <Filter>Source\Engine\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\project_view.cpp">
+      <Filter>Source\Engine\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\model_loader.cpp">
+      <Filter>Source\Engine\Loader</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\asset_sheet_manager.cpp">
+      <Filter>Source\Engine\Loader</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\texture_loader.cpp">
+      <Filter>Source\Engine\Loader</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\asset_manager.cpp">
+      <Filter>Source\Engine\Loader</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -663,9 +678,6 @@
       <Filter>Header\Engine\System</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\constant_buffer.h">
-      <Filter>Header\Engine\System</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Engine\content_browser.h">
       <Filter>Header\Engine\System</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\dx11_configurator.h">
@@ -890,9 +902,6 @@
     <ClInclude Include="Source\Engine\input_manager.h">
       <Filter>Header\Engine\Manager</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Engine\editor_manager.h">
-      <Filter>Header\Engine\Manager</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Engine\file_path_helper.h">
       <Filter>Header\Engine\Helper</Filter>
     </ClInclude>
@@ -932,17 +941,41 @@
     <ClInclude Include="Source\Game\enemy_soldier_component.h">
       <Filter>Header\Game\Components</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Engine\hierarchy.h">
-      <Filter>Header\Engine\System</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Engine\inspector.h">
-      <Filter>Header\Engine\System</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Engine\component_tag_mapping.h">
       <Filter>Header\Engine\System\Mapping</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Engine\inspector.h">
+      <Filter>Header\Engine\Editor</Filter>
+    </ClInclude>
     <ClInclude Include="Source\Engine\menu_bar.h">
-      <Filter>Header\Engine\System</Filter>
+      <Filter>Header\Engine\Editor</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\hierarchy.h">
+      <Filter>Header\Engine\Editor</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\content_browser.h">
+      <Filter>Header\Engine\Editor</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\editor_manager.h">
+      <Filter>Header\Engine\Editor</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\project_view.h">
+      <Filter>Header\Engine\Editor</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\loader.h">
+      <Filter>Header\Engine\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\model_loader.h">
+      <Filter>Header\Engine\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\asset_sheet_manager.h">
+      <Filter>Header\Engine\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\texture_loader.h">
+      <Filter>Header\Engine\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\asset_manager.h">
+      <Filter>Header\Engine\Loader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1101,6 +1134,18 @@
     </Filter>
     <Filter Include="Header\Game\Components">
       <UniqueIdentifier>{97f20554-620d-46b4-8ef2-51d339dda384}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header\Engine\Editor">
+      <UniqueIdentifier>{4a69d3be-197c-41f9-aefa-db655edc63be}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Engine\Editor">
+      <UniqueIdentifier>{19646e92-0026-4d19-baf0-fec442388c7c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header\Engine\Loader">
+      <UniqueIdentifier>{9eb1d743-ca80-4d11-a5aa-befb0a215ce5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Engine\Loader">
+      <UniqueIdentifier>{f725f828-e4b4-4a47-a8b8-b1a504ad3ffd}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
