--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=0,0
+ViewportPos=11,45
+ViewportId=0x9F5F46A1
 Size=912,648
 Collapsed=0
 
@@ -58,7 +59,7 @@ Collapsed=0
 Pos=0,36
 Size=32,32
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000007,1
 
 [Window][RTV]
 Pos=13,34
@@ -94,14 +95,20 @@ Pos=610,282
 Size=599,314
 Collapsed=0
 
+[Window][Project]
+Pos=0,36
+Size=32,32
+Collapsed=0
+DockId=0x00000007,0
+
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
   DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,77 HiddenTabBar=1 Selected=0x1C39D6E4
   DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1460 Split=Y
-    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=2560,1081 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=2560,1025 Split=X
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=350,1025 Selected=0x788BAA0D
         DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1714,1025 CentralNode=1 Selected=0xCCA64F5D
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
-    DockNode      ID=0x00000007 Parent=0x00000008 SizeRef=2560,456 Selected=0x31780935
+    DockNode      ID=0x00000007 Parent=0x00000008 SizeRef=2560,433 Selected=0xA2B3D67B
 
