--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -32,6 +32,8 @@
     <ClInclude Include="Source\Engine\actor_component.h" />
     <ClInclude Include="Source\Engine\anim_sprite.h" />
     <ClInclude Include="Source\Engine\arithmetic.h" />
+    <ClInclude Include="Source\Engine\asset_manager.h" />
+    <ClInclude Include="Source\Engine\asset_sheet_manager.h" />
     <ClInclude Include="Source\Engine\billboard_component.h" />
     <ClInclude Include="Source\Engine\blend.h" />
     <ClInclude Include="Source\Engine\bloom.h" />
@@ -80,6 +82,7 @@
     <ClInclude Include="Source\Engine\input_system.h" />
     <ClInclude Include="Source\Engine\inspector.h" />
     <ClInclude Include="Source\Engine\light.h" />
+    <ClInclude Include="Source\Engine\loader.h" />
     <ClInclude Include="Source\Engine\local_shader_manager.h" />
     <ClInclude Include="Source\Engine\locator.h" />
     <ClInclude Include="Source\Engine\Logger.h" />
@@ -88,7 +91,9 @@
     <ClInclude Include="Source\Engine\menu_bar.h" />
     <ClInclude Include="Source\Engine\mesh_object.h" />
     <ClInclude Include="Source\Engine\mesh_particle.h" />
+    <ClInclude Include="Source\Engine\model_loader.h" />
     <ClInclude Include="Source\Engine\physic_material_component.h" />
+    <ClInclude Include="Source\Engine\project_view.h" />
     <ClInclude Include="Source\Engine\rigid_body_component.h" />
     <ClInclude Include="Source\Engine\normal_map_resource.h" />
     <ClInclude Include="Source\Engine\obj_model_component.h" />
@@ -119,6 +124,7 @@
     <ClInclude Include="Source\Engine\shader_interop_renderer.h" />
     <ClInclude Include="Source\Engine\terrain_filename_mapping.h" />
     <ClInclude Include="Source\Engine\texture_filename_mapping.h" />
+    <ClInclude Include="Source\Engine\texture_loader.h" />
     <ClInclude Include="Source\Engine\texture_resource_manager.h" />
     <ClInclude Include="Source\Engine\texture_resource_mapping.h" />
     <ClInclude Include="Source\Engine\sampler.h" />
@@ -173,6 +179,8 @@
     <ClCompile Include="Source\Engine\actor_component.cpp" />
     <ClCompile Include="Source\Engine\anim_sprite.cpp" />
     <ClCompile Include="Source\Engine\arithmetic.cpp" />
+    <ClCompile Include="Source\Engine\asset_manager.cpp" />
+    <ClCompile Include="Source\Engine\asset_sheet_manager.cpp" />
     <ClCompile Include="Source\Engine\billboard_component.cpp" />
     <ClCompile Include="Source\Engine\blend.cpp" />
     <ClCompile Include="Source\Engine\bloom.cpp" />
@@ -217,7 +225,9 @@
     <ClCompile Include="Source\Engine\menu_bar.cpp" />
     <ClCompile Include="Source\Engine\mesh_object.cpp" />
     <ClCompile Include="Source\Engine\mesh_particle.cpp" />
+    <ClCompile Include="Source\Engine\model_loader.cpp" />
     <ClCompile Include="Source\Engine\physic_material_component.cpp" />
+    <ClCompile Include="Source\Engine\project_view.cpp" />
     <ClCompile Include="Source\Engine\rigid_body_component..cpp" />
     <ClCompile Include="Source\Engine\obj_model_component.cpp" />
     <ClCompile Include="Source\Engine\metal.cpp" />
@@ -267,6 +277,7 @@
     <ClCompile Include="Source\Engine\string_helper.cpp" />
     <ClCompile Include="Source\Engine\texture.cpp" />
     <ClCompile Include="Source\Engine\texture2d_shader.cpp" />
+    <ClCompile Include="Source\Engine\texture_loader.cpp" />
     <ClCompile Include="Source\Engine\texture_resource_manager.cpp" />
     <ClCompile Include="Source\Engine\transform_component.cpp" />
     <ClCompile Include="Source\Engine\vertex_shader.cpp" />
