Material,Model,Texture Loaderの仮完成(テスト未実装) うまく動かない可能性が大いにある

--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="Source\Engine\material.h" />
     <ClInclude Include="Source\Engine\material_component.h" />
     <ClInclude Include="Source\Engine\material_discrimination.h" />
+    <ClInclude Include="Source\Engine\material_loader.h" />
     <ClInclude Include="Source\Engine\menu_bar.h" />
     <ClInclude Include="Source\Engine\mesh_object.h" />
     <ClInclude Include="Source\Engine\mesh_particle.h" />
@@ -225,6 +226,7 @@
     <ClCompile Include="Source\Engine\material.cpp" />
     <ClCompile Include="Source\Engine\material_component.cpp" />
     <ClCompile Include="Source\Engine\material_discrimination.cpp" />
+    <ClCompile Include="Source\Engine\material_loader.cpp" />
     <ClCompile Include="Source\Engine\menu_bar.cpp" />
     <ClCompile Include="Source\Engine\mesh_object.cpp" />
     <ClCompile Include="Source\Engine\mesh_particle.cpp" />
