ProjectViewでファイルの階層表示完了

--- a/imgui.ini
+++ b/imgui.ini
@@ -100,6 +100,10 @@ Size=32,32
 Collapsed=0
 DockId=0x00000007,0
 
+[Table][0x48072B15,2]
+Column 0  Weight=0.3200
+Column 1  Weight=1.6800
+
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
   DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,77 HiddenTabBar=1 Selected=0x1C39D6E4
