--- a/imgui.ini
+++ b/imgui.ini
@@ -101,8 +101,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Table][0x48072B15,2]
-Column 0  Weight=0.5671
-Column 1  Weight=1.4329
+Column 0  Weight=0.3263
+Column 1  Weight=1.6737
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
@@ -113,5 +113,5 @@ DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Sel
         DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=350,1025 Selected=0x788BAA0D
         DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1714,1025 CentralNode=1 Selected=0xCCA64F5D
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
-    DockNode      ID=0x00000007 Parent=0x00000008 SizeRef=2560,520 Selected=0x31780935
+    DockNode      ID=0x00000007 Parent=0x00000008 SizeRef=2560,520 Selected=0xA2B3D67B
 
