--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Source\Engine\string_helper.h" />
     <ClInclude Include="Source\Engine\texture.h" />
     <ClInclude Include="Source\Engine\texture2d_shader.h" />
+    <ClInclude Include="Source\Engine\tool_bar.h" />
     <ClInclude Include="Source\Engine\toon.h" />
     <ClInclude Include="Source\Engine\transform_component.h" />
     <ClInclude Include="Source\Engine\type_rename.h" />
@@ -291,6 +292,7 @@
     <ClCompile Include="Source\Engine\texture2d_shader.cpp" />
     <ClCompile Include="Source\Engine\texture_loader.cpp" />
     <ClCompile Include="Source\Engine\texture_resource_manager.cpp" />
+    <ClCompile Include="Source\Engine\tool_bar.cpp" />
     <ClCompile Include="Source\Engine\transform_component.cpp" />
     <ClCompile Include="Source\Engine\vertex_shader.cpp" />
     <ClCompile Include="Source\Engine\camera_component.cpp" />
