--- a/imgui.ini
+++ b/imgui.ini
@@ -85,9 +85,9 @@ DockId=0x00000004,0
 
 [Window][Menu Bar]
 Pos=0,31
-Size=32,1
+Size=32,32
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000009,0
 
 [Window][Menu Setting]
 Pos=610,282
@@ -100,15 +100,29 @@ Size=32,32
 Collapsed=0
 DockId=0x00000007,0
 
+[Window][##Tool Bar]
+Pos=0,33
+Size=32,32
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Adjust Button]
+Pos=13,34
+Size=11,32
+Collapsed=0
+DockId=0x00000005,1
+
 [Table][0x48072B15,2]
 Column 0  Weight=0.3287
 Column 1  Weight=1.6713
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,77 HiddenTabBar=1 Selected=0x1C39D6E4
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1460 Split=Y
-    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=2560,938 Split=X
+  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,97 Split=Y Selected=0x1C39D6E4
+    DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=2560,49 HiddenTabBar=1 Selected=0x1C39D6E4
+    DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=2560,46 HiddenTabBar=1 Selected=0xE4AF3456
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1440 Split=Y
+    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=2560,918 Split=X
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 CentralNode=1 Selected=0xCCA64F5D
