--- a/imgui.ini
+++ b/imgui.ini
@@ -58,13 +58,13 @@ Collapsed=0
 Pos=0,36
 Size=32,32
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000007,0
 
 [Window][RTV]
-Pos=13,34
-Size=11,32
+Pos=17,34
+Size=6,32
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000D,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -104,7 +104,7 @@ DockId=0x00000007,0
 Pos=0,33
 Size=32,32
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000A,0
 
 [Window][Adjust Button]
 Pos=13,34
@@ -112,20 +112,46 @@ Size=11,32
 Collapsed=0
 DockId=0x00000005,1
 
+[Window][ Hierarchy]
+Pos=0,34
+Size=15,32
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][ Inspector]
+Pos=25,34
+Size=7,32
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][ Project]
+Pos=0,36
+Size=32,32
+Collapsed=0
+DockId=0x00000007,1
+
 [Table][0x48072B15,2]
 Column 0  Weight=0.3287
 Column 1  Weight=1.6713
 
+[Table][0xBA570601,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,97 Split=Y Selected=0x1C39D6E4
-    DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=2560,49 HiddenTabBar=1 Selected=0x1C39D6E4
-    DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=2560,46 HiddenTabBar=1 Selected=0xE4AF3456
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1440 Split=Y
-    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=2560,918 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
-        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
-        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 CentralNode=1 Selected=0xCCA64F5D
-      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
-    DockNode      ID=0x00000007 Parent=0x00000008 SizeRef=2560,520 Selected=0xA2B3D67B
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
+  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,97 Split=Y Selected=0x1C39D6E4
+    DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=2560,49 HiddenTabBar=1 Selected=0x1C39D6E4
+    DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,46 HiddenTabBar=1 Selected=0xE4AF3456
+  DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1440 Split=Y
+    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,982 Split=X
+      DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
+        DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
+        DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
+          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=316,856 Selected=0xD2CD21AB
+          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=1840,856 Split=X Selected=0xCCA64F5D
+            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1709,982 CentralNode=1 Selected=0xCCA64F5D
+            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=472,982 Selected=0x1F3F22F7
+      DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
+    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,456 Selected=0x98A88EA8
 
