--- a/imgui.ini
+++ b/imgui.ini
@@ -58,13 +58,13 @@ Collapsed=0
 Pos=0,36
 Size=32,32
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000007,1
 
 [Window][RTV]
-Pos=17,34
-Size=6,32
+Pos=12,34
+Size=10,32
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x0000000C,1
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -114,13 +114,13 @@ DockId=0x00000005,1
 
 [Window][ Hierarchy]
 Pos=0,34
-Size=15,32
+Size=10,32
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][ Inspector]
-Pos=25,34
-Size=7,32
+Pos=24,34
+Size=8,32
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -128,15 +128,21 @@ DockId=0x0000000E,0
 Pos=0,36
 Size=32,32
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000007,0
+
+[Window][ Scene]
+Pos=12,34
+Size=10,32
+Collapsed=0
+DockId=0x0000000C,0
 
 [Table][0x48072B15,2]
 Column 0  Weight=0.3287
 Column 1  Weight=1.6713
 
 [Table][0xBA570601,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+Column 0  Weight=0.4182
+Column 1  Weight=1.5818
 
 [Docking][Data]
 DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
@@ -148,10 +154,10 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
       DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=316,856 Selected=0xD2CD21AB
-          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=1840,856 Split=X Selected=0xCCA64F5D
-            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1709,982 CentralNode=1 Selected=0xCCA64F5D
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=472,982 Selected=0x1F3F22F7
+          DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1903,982 Split=X Selected=0xCCA64F5D
+            DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=374,982 Selected=0xD2CD21AB
+            DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1527,982 CentralNode=1 Selected=0xF3E10FF5
+          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=655,982 Selected=0x1F3F22F7
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,456 Selected=0x98A88EA8
 
