--- a/imgui.ini
+++ b/imgui.ini
@@ -61,8 +61,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][RTV]
-Pos=11,34
-Size=9,32
+Pos=13,34
+Size=10,32
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -114,13 +114,13 @@ DockId=0x00000005,1
 
 [Window][ Hierarchy]
 Pos=0,34
-Size=9,32
+Size=11,32
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][ Inspector]
-Pos=22,34
-Size=10,32
+Pos=25,34
+Size=7,32
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -131,10 +131,22 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][ Scene]
-Pos=11,34
-Size=9,32
+Pos=13,34
+Size=10,32
 Collapsed=0
 DockId=0x0000000C,0
+
+[Window][Size Text]
+Pos=0,34
+Size=11,32
+Collapsed=0
+DockId=0x0000000B,1
+
+[Window][System Inspector]
+Pos=25,34
+Size=7,32
+Collapsed=0
+DockId=0x0000000E,1
 
 [Table][0x48072B15,2]
 Column 0  Weight=0.3287
@@ -146,18 +158,18 @@ Column 1  Weight=1.5818
 
 [Docking][Data]
 DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,97 Split=Y Selected=0x1C39D6E4
-    DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=2560,49 HiddenTabBar=1 Selected=0x1C39D6E4
-    DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,46 HiddenTabBar=1 Selected=0xE4AF3456
-  DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1440 Split=Y
-    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,982 Split=X
+  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,89 Split=Y Selected=0x1C39D6E4
+    DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=2560,45 HiddenTabBar=1 Selected=0x1C39D6E4
+    DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,42 HiddenTabBar=1 Selected=0xE4AF3456
+  DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1318 Split=Y
+    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,899 Split=X
       DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1736,982 Split=X Selected=0xCCA64F5D
+          DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1929,982 Split=X Selected=0xCCA64F5D
             DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=374,982 Selected=0xD2CD21AB
-            DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1360,982 CentralNode=1 Selected=0xF3E10FF5
-          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=822,982 Selected=0x1F3F22F7
+            DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1553,982 CentralNode=1 Selected=0xF3E10FF5
+          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=629,982 Selected=0xCDB73424
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
-    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,456 Selected=0x98A88EA8
+    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,417 Selected=0x98A88EA8
 
